--- a/Stage2.ipynb
+++ b/Stage2.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r'D:\\Data Science\\Rakamin\\FinPro\\dataset.csv')"
+    "df = pd.read_csv('dataset.csv')"
    ]
   },
   {
@@ -37,6 +37,14 @@
     "numerikal = ['Administrative', 'Administrative_Duration', 'Informational', 'Informational_Duration',  \n",
     "             'ProductRelated', 'ProductRelated_Duration', 'BounceRates', 'ExitRates', 'PageValues','SpecialDay']\n",
     "date = ['Month']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ada60e17",
+   "metadata": {},
+   "source": [
+    "## Missing Value"
    ]
   },
   {
@@ -79,6 +87,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "645c84ab",
+   "metadata": {},
+   "source": [
+    "Dikarenakan jumlah data numerik yang null berpotensi cukup banyak, bisa kita fill menggunakan median. Dipilih median karena sebaran data yang skew ke kanan, sehingga nilai mean lebih tinggi dari median."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "id": "b4f50430-5686-4195-b888-b6c46569ab13",
@@ -89,6 +105,14 @@
     "df['Administrative_Duration'] = df['Administrative_Duration'].fillna(value=df['Administrative_Duration'].median())\n",
     "df['ProductRelated_Duration'] = df['ProductRelated_Duration'].fillna(value=df['ProductRelated_Duration'].median())\n",
     "df['BounceRates'] = df['BounceRates'].fillna(value=df['BounceRates'].median())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dbbbfb6",
+   "metadata": {},
+   "source": [
+    "Data kategorikal yang null tidak terlalu banyak sehingga bisa kita drop"
    ]
   },
   {
@@ -141,6 +165,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d96f9052",
+   "metadata": {},
+   "source": [
+    "## Duplicated Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "53fcba52-0264-41c8-9c6b-53ec7d8241f5",
@@ -159,6 +191,14 @@
    ],
    "source": [
     "df.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5acb0652",
+   "metadata": {},
+   "source": [
+    "Hapus duplikat tapi simpan nilai yang pertama muncul."
    ]
   },
   {
@@ -193,6 +233,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c552a7e1",
+   "metadata": {},
+   "source": [
+    "## Handle Categorical"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72fa9841",
+   "metadata": {},
+   "source": [
+    "### Grouping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70d3d911",
+   "metadata": {},
+   "source": [
+    "Penamaan data kategorikal berdasarkan EDA di stage 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "75f943ae-15bf-4896-8004-9ed5ea82ebd9",
@@ -210,6 +274,20 @@
     "\n",
     "df.TrafficType = df.TrafficType.astype('string').replace(['1', '2', '3', '4', '5', '6', '8', '10', '13'],\n",
     "                                        ['Organic Search', 'Paid Search', 'Direct Traffic', 'Social Media', 'Facebook Ads', 'Referral Traffic', 'Email Marketing ', 'Display Advertising', 'Affiliate Marketing'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b70b37f5",
+   "metadata": {},
+   "source": [
+    "beberapa data memiliki count yang sangat kecil seperti :  \n",
+    "  \n",
+    "- VisitorType : Other  \n",
+    "- Operating system : 4 (Mac OS), 5 (Blackberry OS), 6 (Chrome OS), 7 (Unix), 8  \n",
+    "- browser : 7 (Maxthon), 9 (Vivaldi), 11 (DuckDuckGo), 12 (Opera), 13 (Netscape)  \n",
+    "- traffic type : 9,7,12,14,15,16,17,18,19  \n",
+    "data ini memiliki potensi untuk didrop atau digabung menjadi \"other\"  "
    ]
   },
   {
@@ -320,6 +398,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "96a8e10c",
+   "metadata": {},
+   "source": [
+    "### Feature encoding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc32302a",
+   "metadata": {},
+   "source": [
+    "Semua fitur kategorikal tidak memiki sifat berurutan atau memiliki derajat, sehingga bisa dilakukan one hot encoding."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "971a3dd1-5761-4699-8aa4-edfe8709f550",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "columns_to_encode = ['OperatingSystems', 'Browser', 'Region', 'TrafficType', 'VisitorType', 'Weekend','Month']\n",
+    "df = pd.get_dummies(df, columns=columns_to_encode)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f1fccb9",
+   "metadata": {},
+   "source": [
+    "## Handling Numerical"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd00b7cd",
+   "metadata": {},
+   "source": [
+    "### Outlier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "e47c9a51-e710-4d15-91bd-db18486d23d9",
@@ -329,6 +452,14 @@
     "outlier = ['Administrative','Administrative_Duration','Informational','Informational_Duration',\n",
     "           'ProductRelated','ProductRelated_Duration','BounceRates','ExitRates',\n",
     "           'PageValues']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4257a2fe",
+   "metadata": {},
+   "source": [
+    "Dikarenakan sebaran data yang skew ke kanan, diterapkan log transformation untuk menormalkan sebaran data"
    ]
   },
   {
@@ -398,24 +529,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "971a3dd1-5761-4699-8aa4-edfe8709f550",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "\n",
-    "columns_to_encode = ['OperatingSystems', 'Browser', 'Region', 'TrafficType', 'VisitorType', 'Weekend','Month']\n",
-    "df = pd.get_dummies(df, columns=columns_to_encode)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "5bc0191a-d2e5-4341-9a8e-5dc045c8c4e1",
    "metadata": {},
    "source": [
-    "<span style=\"font-size:25px;\">**Splitting Data**"
+    "### Splitting Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cab2093f",
+   "metadata": {},
+   "source": [
+    "Sebelum scaling data, dilakukan splitting terlebih dahulu untuk menghindari data leakage"
    ]
   },
   {
@@ -454,7 +580,15 @@
    "id": "e430bc07-6fc6-485c-add0-6600be540ebd",
    "metadata": {},
    "source": [
-    "<span style=\"font-size:25px;\">**Scaling Data**"
+    "### Scaling Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "264e82be",
+   "metadata": {},
+   "source": [
+    "Dilakukan scaling data menggunakan standardisasi. Dipilih standardisasi karena tidak terlalu sensitif ke outlier"
    ]
   },
   {
@@ -505,6 +639,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d28d154",
+   "metadata": {},
+   "source": [
+    "Karena fitur dependant bersifat sangat imbalance, dilakukan handling menggunakan teknik SMOTE"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "id": "cf015503-315a-40f2-be65-fe44eed85c03",
@@ -529,6 +671,14 @@
     "\n",
     "print('Original dataset shape:', Counter(y_train))\n",
     "print('Resampled dataset shape:', Counter(y_res))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7c6589f-9428-4408-ac8e-39698fa9b328",
+   "metadata": {},
+   "source": [
+    "<span style=\"font-size:25px;\">**Feature Engineering**"
    ]
   },
   {
@@ -604,7 +754,9 @@
    "cell_type": "code",
    "execution_count": 40,
    "id": "e53c2c8a-45a2-466c-8a16-b93b009989c7",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -672,14 +824,6 @@
     "\n",
     "for column, correlation in correlation_results.items():\n",
     "    print(f\"Correlation between 'Revenue' and '{column}': {correlation:.2f}\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a7c6589f-9428-4408-ac8e-39698fa9b328",
-   "metadata": {},
-   "source": [
-    "<span style=\"font-size:25px;\">**Feature Engineering**"
    ]
   },
   {
@@ -763,7 +907,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
