Buat model Class Decision Tree dan evaluasinya

--- a/Stage3.ipynb
+++ b/Stage3.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b4f50430-5686-4195-b888-b6c46569ab13",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "8487de91-327b-446b-8614-08cc00cfb3ed",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "d8fecf4d-b356-4a8f-aca1-99c7d5993569",
    "metadata": {},
    "outputs": [],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "75f943ae-15bf-4896-8004-9ed5ea82ebd9",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "8b728d92-8628-48ae-bf0b-9c97f2851367",
    "metadata": {},
    "outputs": [],
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "3887ddb1-af94-4853-918e-6a938171e8c9",
    "metadata": {},
    "outputs": [],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "febda95f-c9bd-4393-9514-2c0e6ca5d6bd",
    "metadata": {},
    "outputs": [],
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "971a3dd1-5761-4699-8aa4-edfe8709f550",
    "metadata": {},
    "outputs": [],
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "e47c9a51-e710-4d15-91bd-db18486d23d9",
    "metadata": {},
    "outputs": [],
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "d9dffa5e-b3c6-4452-9c76-2ed9dd650e58",
    "metadata": {},
    "outputs": [],
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "33341f7b-77ad-4f81-af72-c9da09d947a8",
    "metadata": {},
    "outputs": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "598fc468-95d6-429a-a117-4d2885d0f19f",
    "metadata": {},
    "outputs": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "9fd17c6a-efe9-448c-89af-3fae79f703c3",
    "metadata": {},
    "outputs": [],
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "cf015503-315a-40f2-be65-fe44eed85c03",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "5279d2b5-e3fd-4175-9e08-3ef908be654d",
    "metadata": {},
    "outputs": [],
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "4c1f5ff0-54d9-42e8-91b3-e62dc7b8c6b6",
    "metadata": {},
    "outputs": [],
@@ -810,21 +810,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "651a21b7-edeb-432c-9389-0932f10ec01d",
-   "metadata": {},
-   "source": [
-    "Average Session Duration: Menghitung rata-rata waktu yang dihabiskan oleh pelanggan dengan membagi 'ProductRelated_Duration' dan 'ProductRelated'.\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "154bb474-7437-4cc8-8194-53b36acbbae1",
    "metadata": {},
    "outputs": [],
    "source": [
     "df['Avg_Duration'] = df['ProductRelated_Duration']/df['ProductRelated']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "651a21b7-edeb-432c-9389-0932f10ec01d",
+   "metadata": {},
+   "source": [
+    "Average Session Duration: Menghitung rata-rata waktu yang dihabiskan oleh pelanggan dengan membagi 'ProductRelated_Duration' dan 'ProductRelated'.\n"
    ]
   },
   {
@@ -864,37 +864,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "02b11ec7-86e1-4771-9153-c5f0716ee841",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import accuracy_score, confusion_matrix, recall_score, precision_score, f1_score\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "def metrics(y_true, y_pred):\n",
-    "    \n",
-    "    tn, fp, fn, tp = confusion_matrix(y_true, y_pred).ravel()\n",
-    "\n",
     "    accuracy = accuracy_score(y_true, y_pred)\n",
-    "    error_rate = 1 - accuracy\n",
-    "    tpr_recall = recall_score(y_true, y_pred)\n",
-    "    fpr = fp / (fp + tn)\n",
-    "    tnr_specificity = tn / (tn + fp)\n",
-    "    precision = precision_score(y_true, y_pred)\n",
-    "    f1score = f1_score(y_true, y_pred)\n",
-    "\n",
-    "    print(f\"Accuracy = {accuracy}\")\n",
-    "    print(f\"Error Rate = {error_rate}\")\n",
-    "    print(f\"True Positive Rate (Recall) = {tpr_recall}\")\n",
-    "    print(f\"False Positive Rate = {fpr}\")\n",
-    "    print(f\"True Negative Rate (Specificity) = {tnr_specificity}\")\n",
-    "    print(f\"Precision = {precision}\")\n",
-    "    print(f\"F1Score = {f1score}\")"
+    "    print(f\"Accuracy = {accuracy}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1da55ea4-77f8-4a36-8d46-53ef2066cb9a",
+   "metadata": {},
+   "source": [
+    "### Class Decision Tree"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
+   "id": "afd0cbcd-b5ce-43b9-b544-dd84fb46c0cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import tree\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "cdt_classifier = DecisionTreeClassifier(random_state=42)\n",
+    "cdt_classifier.fit(X_train_scaled, y_train)\n",
+    "y_pred1 = cdt_classifier.predict(X_test_scaled)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1750543d-fdce-4cd7-b5e6-92fd2b935fc8",
+   "metadata": {},
+   "source": [
+    "### Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "ac5ff405-c49e-4dc4-8e26-616afacd0f93",
    "metadata": {},
    "outputs": [],
@@ -904,7 +918,7 @@
     "from sklearn.metrics import accuracy_score\n",
     "rf_classifier = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "rf_classifier.fit(X_train_scaled, y_train)\n",
-    "y_pred = rf_classifier.predict(X_test_scaled)"
+    "y_pred2 = rf_classifier.predict(X_test_scaled)"
    ]
   },
   {
@@ -917,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "011f3fae-5db0-46d6-a024-27c552ad4d0e",
    "metadata": {},
    "outputs": [
@@ -925,20 +939,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Model: Decision Tree Classifier\n",
+      "Accuracy = 0.8656652360515021\n",
       "Model: RandomForest Classifier\n",
-      "Accuracy = 0.9021459227467811\n",
-      "Error Rate = 0.09785407725321893\n",
-      "True Positive Rate (Recall) = 0.5211267605633803\n",
-      "False Positive Rate = 0.029367088607594936\n",
-      "True Negative Rate (Specificity) = 0.970632911392405\n",
-      "Precision = 0.7613168724279835\n",
-      "F1Score = 0.6187290969899666\n"
+      "Accuracy = 0.9021459227467811\n"
      ]
     }
    ],
    "source": [
+    "print(\"Model: Decision Tree Classifier\")\n",
+    "metrics(y_test, y_pred1)\n",
     "print(\"Model: RandomForest Classifier\")\n",
-    "metrics(y_test, y_pred)"
+    "metrics(y_test, y_pred2)"
    ]
   },
   {
