Coba KNN classifier dan evaluasinya

--- a/Stage3.ipynb
+++ b/Stage3.ipynb
@@ -923,6 +923,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d3498aae-5960-422c-af95-f073269f6bd3",
+   "metadata": {},
+   "source": [
+    "### K-Neighbors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "05998f00-6f00-4fe4-8204-0f9c968162aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "k = 3\n",
+    "knn = KNeighborsClassifier(n_neighbors=k)\n",
+    "knn.fit(X_train_scaled, y_train)\n",
+    "y_pred3 = knn.predict(X_test_scaled)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7a417bc1-0547-41f7-bd82-1e50af74175c",
    "metadata": {},
    "source": [
