--- a/Stage3_Tania.ipynb
+++ b/Stage3_Tania.ipynb
@@ -995,7 +995,7 @@
     "    print(f\"False Positive Rate = {fpr}\")\n",
     "    print(f\"True Negative Rate (Specificity) = {tnr_specificity}\")\n",
     "    print(f\"Precision = {precision}\")\n",
-    "    print(f\"F1Score = {f1score}\")"
+    "    print(f\"F1Score = {f1score}\")\n"
    ]
   },
   {
@@ -1018,6 +1018,20 @@
     "cdt_classifier = DecisionTreeClassifier(random_state=42)\n",
     "cdt_classifier.fit(X_res, y_res)\n",
     "y_pred1 = cdt_classifier.predict(X_test_scaled)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "c4d1797a-87dc-4172-bb25-4427ce9d66d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import tree\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "cdt_classifier2 = DecisionTreeClassifier(random_state=42)\n",
+    "cdt_classifier2.fit(X_train_scaled, y_train)\n",
+    "y_pred12 = cdt_classifier2.predict(X_test_scaled)\n"
    ]
   },
   {
@@ -1044,6 +1058,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "1ac1d564-05db-45a4-a8cb-1c76e35994a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "rf_classifier2 = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "rf_classifier2.fit(X_train_scaled, y_train)\n",
+    "y_pred22 = rf_classifier.predict(X_test_scaled)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d3498aae-5960-422c-af95-f073269f6bd3",
    "metadata": {},
@@ -1066,6 +1095,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "1f6d5c08-1e95-44ba-a568-5c84a902c8ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xgboost as xgb\n",
+    "XGboost = xgb.XGBClassifier()\n",
+    "XGboost.fit(X_res, y_res)\n",
+    "y_pred4 = XGboost.predict(X_test_scaled)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7a417bc1-0547-41f7-bd82-1e50af74175c",
    "metadata": {},
@@ -1075,7 +1117,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
+   "id": "cd173fd7-3a18-4895-bfa0-7130e7386767",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "id": "011f3fae-5db0-46d6-a024-27c552ad4d0e",
    "metadata": {},
    "outputs": [
@@ -1084,14 +1134,22 @@
      "output_type": "stream",
      "text": [
       "Model: Decision Tree Classifier\n",
-      "Accuracy = 0.7605150214592274\n",
-      "Error Rate = 0.23948497854077255\n",
-      "True Positive Rate (Recall) = 0.3464788732394366\n",
-      "False Positive Rate = 0.1650632911392405\n",
-      "True Negative Rate (Specificity) = 0.8349367088607595\n",
-      "Precision = 0.2739420935412027\n",
-      "F1Score = 0.30597014925373134\n",
+      "Accuracy = 0.7497854077253219\n",
+      "Error Rate = 0.2502145922746781\n",
+      "True Positive Rate (Recall) = 0.2704225352112676\n",
+      "False Positive Rate = 0.1640506329113924\n",
+      "True Negative Rate (Specificity) = 0.8359493670886076\n",
+      "Precision = 0.22857142857142856\n",
+      "F1Score = 0.24774193548387097\n",
       "Model: RandomForest Classifier\n",
+      "Accuracy = 0.828755364806867\n",
+      "Error Rate = 0.17124463519313304\n",
+      "True Positive Rate (Recall) = 0.2140845070422535\n",
+      "False Positive Rate = 0.060759493670886074\n",
+      "True Negative Rate (Specificity) = 0.9392405063291139\n",
+      "Precision = 0.3877551020408163\n",
+      "F1Score = 0.27586206896551724\n",
+      "Model: RandomForest Classifier tanpa handling class\n",
       "Accuracy = 0.828755364806867\n",
       "Error Rate = 0.17124463519313304\n",
       "True Positive Rate (Recall) = 0.2140845070422535\n",
@@ -1113,20 +1171,30 @@
    "source": [
     "print(\"Model: Decision Tree Classifier\")\n",
     "metrics(y_test, y_pred1)\n",
+    "print(\n",
     "print(\"Model: RandomForest Classifier\")\n",
     "metrics(y_test, y_pred2)\n",
+    "print(\"Model: RandomForest Classifier tanpa handling class\")\n",
+    "metrics(y_test, y_pred22)\n",
+    "print(\"Model: XGBoost Classifier\")\n",
+    "metrics(y_test, y_pred22)\n",
     "print(\"Model: K-Neighbors Classifier\")\n",
     "metrics(y_test, y_pred3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "id": "993677cf-9931-4f62-8637-e1d39841e122",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import cross_validate\n",
+    "def eval_classification(model):\n",
+    "    score = cross_validate(model, X, y, cv=5, scoring='recall', return_train_score=True)\n",
+    "    print('recall (crossval train): '+ str(score['train_score'].mean()))\n",
+    "    print('recall (crossval test): '+ str(score['test_score'].mean()))\n",
+    "\n",
     "def show_feature_importance(model):\n",
     "    feat_importances = pd.Series(model.feature_importances_, index=X.columns)\n",
     "    ax = feat_importances.nlargest(25).plot(kind='barh', figsize=(10, 8))\n",
@@ -1139,7 +1207,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
+   "id": "fc5e30c8-7116-4cab-9cf4-4ea22c98cd1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "recall (crossval train): 1.0\n",
+      "recall (crossval test): 0.09780219780219782\n"
+     ]
+    }
+   ],
+   "source": [
+    "eval_classification(rf_classifier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "69a685e3-a7b5-49f3-8f8a-0efaca32d951",
    "metadata": {},
    "outputs": [
@@ -1161,7 +1248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f6d5c08-1e95-44ba-a568-5c84a902c8ce",
+   "id": "82d47b82-e02c-4087-9c86-fe6f6c85bead",
    "metadata": {},
    "outputs": [],
    "source": []
