coba crossval dngn penambahan fitur

--- a/tania1.ipynb
+++ b/tania1.ipynb
@@ -547,32 +547,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "id": "1f9429a2-26c6-49ed-9d41-9bed4464c05d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import accuracy_score, confusion_matrix, recall_score, precision_score, f1_score\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
+    "from sklearn.model_selection import cross_validate\n",
     "\n",
-    "def metrics(y_test, y_pred):\n",
-    "    \n",
-    "    tn, fp, fn, tp = confusion_matrix(y_test, y_pred).ravel()\n",
+    "def eval_classification(model):\n",
+    "    y_pred = model.predict(X_test_scaled)\n",
+    "    y_pred_proba = model.predict_proba(X_test_scaled)\n",
     "\n",
-    "    accuracy = accuracy_score(y_test, y_pred)\n",
-    "    error_rate = 1 - accuracy\n",
-    "    tpr_recall = recall_score(y_test, y_pred)\n",
-    "    fpr = fp / (fp + tn)\n",
-    "    tnr_specificity = tn / (tn + fp)\n",
-    "    precision = precision_score(y_test, y_pred)\n",
-    "    f1score = f1_score(y_test, y_pred)\n",
+    "    print(\"Accuracy (Test Set): %.2f\" % accuracy_score(y_test, y_pred))\n",
+    "    print(\"Precision (Test Set): %.2f\" % precision_score(y_test, y_pred))\n",
+    "    print(\"Recall (Test Set): %.2f\" % recall_score(y_test, y_pred))\n",
+    "    print(\"F1-Score (Test Set): %.2f\" % f1_score(y_test, y_pred))\n",
     "\n",
-    "    print(f\"Accuracy = {accuracy}\")\n",
-    "    print(f\"Error Rate = {error_rate}\")\n",
-    "    print(f\"True Positive Rate (Recall) = {tpr_recall}\")\n",
-    "    print(f\"False Positive Rate = {fpr}\")\n",
-    "    print(f\"True Negative Rate (Specificity) = {tnr_specificity}\")\n",
-    "    print(f\"Precision = {precision}\")\n",
-    "    print(f\"F1Score = {f1score}\")\n"
+    "    print(\"roc_auc (test-proba): %.2f\" % roc_auc_score(y_test, y_pred_proba[:, 1]))\n",
+    "    #\n",
+    "    score = cross_validate(model, X_res, y_res, cv=5, scoring='recall', return_train_score=True)\n",
+    "    print('recall (crossval test): '+ str(score['test_score'].mean()))\n"
    ]
   },
   {
@@ -633,19 +628,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "bcd60d5d-a234-4358-89db-e682938f1964",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'lightgbm'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[39], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlightgbm\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LGBMClassifier\n\u001b[0;32m      2\u001b[0m lgb \u001b[38;5;241m=\u001b[39m LGBMClassifier() \n\u001b[0;32m      3\u001b[0m lgb\u001b[38;5;241m.\u001b[39mfit(X_res, y_res) \n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'lightgbm'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LightGBM] [Info] Number of positive: 7230, number of negative: 7230\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.004359 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 7602\n",
+      "[LightGBM] [Info] Number of data points in the train set: 14460, number of used features: 56\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.500000 -> initscore=0.000000\n"
      ]
     }
    ],
@@ -658,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "id": "33499cd1-2d19-4ec6-b749-5c0f04b28997",
    "metadata": {},
    "outputs": [
@@ -667,55 +664,94 @@
      "output_type": "stream",
      "text": [
       "Model: Decision Tree Classifier\n",
-      "Accuracy = 0.7397388059701493\n",
-      "Error Rate = 0.2602611940298507\n",
-      "True Positive Rate (Recall) = 0.8319280494659921\n",
-      "False Positive Rate = 0.7095890410958904\n",
-      "True Negative Rate (Specificity) = 0.29041095890410956\n",
-      "Precision = 0.851063829787234\n",
-      "F1Score = 0.8413871517907903\n",
+      "Accuracy (Test Set): 0.74\n",
+      "Precision (Test Set): 0.85\n",
+      "Recall (Test Set): 0.83\n",
+      "F1-Score (Test Set): 0.84\n",
+      "roc_auc (test-proba): 0.56\n",
+      "recall (crossval test): 0.8125864453665284\n",
       "----------------------------------------\n",
       "Model: RandomForest Classifier Original\n",
-      "Accuracy = 0.8078358208955224\n",
-      "Error Rate = 0.19216417910447758\n",
-      "True Positive Rate (Recall) = 0.924114671163575\n",
-      "False Positive Rate = 0.7589041095890411\n",
-      "True Negative Rate (Specificity) = 0.2410958904109589\n",
-      "Precision = 0.855804268610099\n",
-      "F1Score = 0.8886486486486487\n",
+      "Accuracy (Test Set): 0.81\n",
+      "Precision (Test Set): 0.86\n",
+      "Recall (Test Set): 0.92\n",
+      "F1-Score (Test Set): 0.89\n",
+      "roc_auc (test-proba): 0.74\n",
+      "recall (crossval test): 0.919640387275242\n",
       "----------------------------------------\n",
       "Model: XGBoost Classifier\n",
-      "Accuracy = 0.820429104477612\n",
-      "Error Rate = 0.17957089552238803\n",
-      "True Positive Rate (Recall) = 0.9432265317594154\n",
-      "False Positive Rate = 0.7780821917808219\n",
-      "True Negative Rate (Specificity) = 0.2219178082191781\n",
-      "Precision = 0.855249745158002\n",
-      "F1Score = 0.8970863405506548\n",
+      "Accuracy (Test Set): 0.82\n",
+      "Precision (Test Set): 0.86\n",
+      "Recall (Test Set): 0.94\n",
+      "F1-Score (Test Set): 0.90\n",
+      "roc_auc (test-proba): 0.74\n",
+      "recall (crossval test): 0.9337482710926693\n",
       "----------------------------------------\n",
       "Model: ADABoost Classifier\n",
-      "Accuracy = 0.7756529850746269\n",
-      "Error Rate = 0.22434701492537312\n",
-      "True Positive Rate (Recall) = 0.8482293423271501\n",
-      "False Positive Rate = 0.5780821917808219\n",
-      "True Negative Rate (Specificity) = 0.42191780821917807\n",
-      "Precision = 0.8773255813953489\n",
-      "F1Score = 0.8625321520434409\n"
+      "Accuracy (Test Set): 0.78\n",
+      "Precision (Test Set): 0.88\n",
+      "Recall (Test Set): 0.85\n",
+      "F1-Score (Test Set): 0.86\n",
+      "roc_auc (test-proba): 0.73\n",
+      "recall (crossval test): 0.8448132780082986\n",
+      "----------------------------------------\n",
+      "Model: LGBM\n",
+      "Accuracy (Test Set): 0.83\n",
+      "Precision (Test Set): 0.85\n",
+      "Recall (Test Set): 0.95\n",
+      "F1-Score (Test Set): 0.90\n",
+      "roc_auc (test-proba): 0.76\n",
+      "[LightGBM] [Info] Number of positive: 5784, number of negative: 5784\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.005365 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 7461\n",
+      "[LightGBM] [Info] Number of data points in the train set: 11568, number of used features: 56\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.500000 -> initscore=0.000000\n",
+      "[LightGBM] [Info] Number of positive: 5784, number of negative: 5784\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.004259 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 6693\n",
+      "[LightGBM] [Info] Number of data points in the train set: 11568, number of used features: 56\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.500000 -> initscore=0.000000\n",
+      "[LightGBM] [Info] Number of positive: 5784, number of negative: 5784\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.003497 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 6705\n",
+      "[LightGBM] [Info] Number of data points in the train set: 11568, number of used features: 56\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.500000 -> initscore=0.000000\n",
+      "[LightGBM] [Info] Number of positive: 5784, number of negative: 5784\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.005932 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 6535\n",
+      "[LightGBM] [Info] Number of data points in the train set: 11568, number of used features: 56\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.500000 -> initscore=0.000000\n",
+      "[LightGBM] [Info] Number of positive: 5784, number of negative: 5784\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.004050 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 6549\n",
+      "[LightGBM] [Info] Number of data points in the train set: 11568, number of used features: 56\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.500000 -> initscore=0.000000\n",
+      "recall (crossval test): 0.9421853388658368\n"
      ]
     }
    ],
    "source": [
     "print(\"Model: Decision Tree Classifier\")\n",
-    "metrics(y_test, y_pred1)\n",
+    "eval_classification(cdt_classifier)\n",
     "print(\"-\" * 40) \n",
     "print(\"Model: RandomForest Classifier Original\")\n",
-    "metrics(y_test, y_pred2)\n",
+    "eval_classification(rf_classifier)\n",
     "print(\"-\" * 40)\n",
     "print(\"Model: XGBoost Classifier\")\n",
-    "metrics(y_test, y_pred4)\n",
+    "eval_classification(XGboost)\n",
     "print(\"-\" * 40)\n",
     "print(\"Model: ADABoost Classifier\")\n",
-    "metrics(y_test, y_pred_AB)"
+    "eval_classification(adaboost_classifier)\n",
+    "print(\"-\" * 40)\n",
+    "print(\"Model: LGBM\")\n",
+    "eval_classification(lgb)"
    ]
   },
   {
@@ -804,7 +840,9 @@
    "id": "1358264b-9a90-447c-9104-f1fcdef5eb3c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "show_feature_importance(XGboost)"
+   ]
   }
  ],
  "metadata": {
