--- a/Stage3_raffi.ipynb
+++ b/Stage3_raffi.ipynb
@@ -1168,6 +1168,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e95bc6b3-1017-46c5-9ae4-f01d80892924",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfeature_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SelectKBest, chi2, mutual_info_classif, f_classif\n\u001b[0;32m      3\u001b[0m k_best \u001b[38;5;241m=\u001b[39m SelectKBest(score_func\u001b[38;5;241m=\u001b[39mmutual_info_classif, k\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m25\u001b[39m) \n\u001b[1;32m----> 4\u001b[0m X_train_selected \u001b[38;5;241m=\u001b[39m k_best\u001b[38;5;241m.\u001b[39mfit_transform(X_train, y_train)\n\u001b[0;32m      5\u001b[0m selected_mask \u001b[38;5;241m=\u001b[39m k_best\u001b[38;5;241m.\u001b[39mget_support()\n\u001b[0;32m      6\u001b[0m selected_feature_names \u001b[38;5;241m=\u001b[39m X\u001b[38;5;241m.\u001b[39mcolumns[selected_mask]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'X_train' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_selection import SelectKBest, chi2, mutual_info_classif, f_classif\n",
+    "\n",
+    "k_best = SelectKBest(score_func=mutual_info_classif, k=25) \n",
+    "X_train_selected = k_best.fit_transform(X_res, y_res)\n",
+    "selected_mask = k_best.get_support()\n",
+    "selected_feature_names = X.columns[selected_mask]\n",
+    "print(\"Selected features:\", selected_feature_names)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bf7e53f4-5246-47c6-91d5-a7970a5b06e9",
    "metadata": {},
@@ -1888,7 +1916,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1902,7 +1930,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.11.7"
   },
   "vscode": {
    "interpreter": {
